[gd_scene load_steps=14 format=3 uid="uid://b1vfgrbgsn1dq"]

[ext_resource type="Script" path="res://Battle/battle.gd" id="1_bpw6r"]
[ext_resource type="PackedScene" uid="uid://cvuqng1787hrs" path="res://textbox.tscn" id="1_nvtlo"]
[ext_resource type="Script" path="res://Battle/BattleUI.gd" id="2_o562c"]
[ext_resource type="Texture2D" uid="uid://ev0rhfg3oxel" path="res://Art/icon.svg" id="3_ivtdu"]
[ext_resource type="Texture2D" uid="uid://b1ws63031tlue" path="res://Art/Enemy_Snowbro.png" id="3_v1yqn"]
[ext_resource type="Texture2D" uid="uid://b5q065gxp68yq" path="res://Art/monochrome-transparent.png" id="5_n04re"]
[ext_resource type="Script" path="res://Battle/BattleStage.gd" id="5_r0c4s"]
[ext_resource type="Script" path="res://Battle/BattleMenu.gd" id="5_viovm"]
[ext_resource type="Script" path="res://Battle/BA_Player.gd" id="8_t8w8o"]

[sub_resource type="CompressedTexture2D" id="CompressedTexture2D_f17kn"]
load_path = "res://.godot/imported/monochrome-transparent.png-80192a833e623282ff0c76da915c4fde.ctex"

[sub_resource type="AtlasTexture" id="AtlasTexture_aksg6"]
atlas = SubResource("CompressedTexture2D_f17kn")
region = Rect2(544, 119, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_hxe7s"]
atlas = ExtResource("5_n04re")
region = Rect2(680, 187, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_lsg02"]
atlas = ExtResource("5_n04re")
region = Rect2(595, 221, 16, 16)

[node name="Battle" type="Node"]
script = ExtResource("1_bpw6r")

[node name="BA_Player" type="Node" parent="."]
script = ExtResource("8_t8w8o")

[node name="BattleUI" type="Control" parent="."]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("2_o562c")

[node name="Textbox" parent="BattleUI" instance=ExtResource("1_nvtlo")]
layout_mode = 2
anchors_preset = 0
anchor_bottom = 0.197531
offset_bottom = 0.0
metadata/_edit_use_anchors_ = true
metadata/_edit_lock_ = true

[node name="BattleMenu" type="Panel" parent="BattleUI"]
self_modulate = Color(1, 0, 0, 1)
layout_mode = 2
offset_left = 456.0
offset_top = 512.0
offset_right = 744.0
offset_bottom = 648.0
script = ExtResource("5_viovm")

[node name="HBoxContainer" type="HBoxContainer" parent="BattleUI/BattleMenu"]
layout_mode = 0
offset_top = -40.0
offset_right = 288.0

[node name="AttackButton" type="Button" parent="BattleUI/BattleMenu"]
layout_mode = 2
offset_top = -40.0
offset_right = 40.0
grow_horizontal = 2
grow_vertical = 2
focus_neighbor_left = NodePath("../ActionButton")
focus_neighbor_right = NodePath("../ItemButton")
focus_next = NodePath("../ItemButton")
focus_previous = NodePath("../ActionButton")
icon = SubResource("AtlasTexture_aksg6")
icon_alignment = 1
expand_icon = true

[node name="ItemButton" type="Button" parent="BattleUI/BattleMenu"]
layout_mode = 0
offset_left = 40.0
offset_top = -40.0
offset_right = 80.0
focus_neighbor_left = NodePath("../AttackButton")
focus_neighbor_right = NodePath("../ActionButton")
focus_next = NodePath("../ActionButton")
focus_previous = NodePath("../AttackButton")
icon = SubResource("AtlasTexture_hxe7s")
icon_alignment = 1
expand_icon = true

[node name="ActionButton" type="Button" parent="BattleUI/BattleMenu"]
layout_mode = 0
offset_left = 80.0
offset_top = -40.0
offset_right = 120.0
focus_neighbor_left = NodePath("../ItemButton")
focus_neighbor_right = NodePath("../AttackButton")
focus_next = NodePath("../AttackButton")
focus_previous = NodePath("../ItemButton")
icon = SubResource("AtlasTexture_lsg02")
icon_alignment = 1
expand_icon = true

[node name="BattleStage" type="Node2D" parent="."]
script = ExtResource("5_r0c4s")
metadata/_edit_lock_ = true
metadata/_edit_group_ = true

[node name="Background" type="Sprite2D" parent="BattleStage"]
visible = false
modulate = Color(0, 0, 1, 0.427451)
position = Vector2(576, 328)
scale = Vector2(9, 5.125)
texture = ExtResource("3_ivtdu")

[node name="Enemy" type="Sprite2D" parent="BattleStage"]
position = Vector2(608, 320)
scale = Vector2(5, 5)
texture = ExtResource("3_v1yqn")
region_enabled = true
region_rect = Rect2(0, 0, 64, 64)
